# toxic-spans-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: spans-pred.txt
notebooks/: development.ipynb  draft.ipynb
