[tool.poetry]
name = "toxic-spans-detection"
version = "0.1.0"
description = "An attempt at the SemEval 2021 Task 5: Toxic Spans Detection."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>","Silva Ndoja <silvandoja1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

notebook = "^6.4.3"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
black-nb = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
