[tool.poetry]
name = "toxic-spans-detection"
version = "0.1.0"
description = "An attempt at the SemEval 2021 Task 5: Toxic Spans Detection."
authors = ["Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>","Silva Ndoja <silvandoja1@gmail.com>"]
license = "MIT"
keywords = ["nlp", "deep-learning", "semeval-2021", "toxic-spans-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.8b0"}
black-nb = "^0.5.0"
ipywidgets = "^7.6.5"
notebook = "^6.4.3"
pandas = "^1.3.2"
plotnine = "^0.8.0"
pytorch-lightning = "^1.5.9"
tqdm = "^4.62.3"
transformers = "^4.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
